# src2build

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml  cmake-ubuntu.yml
src/: Makefile  compat.h  src2build.c  table.s  u8tosj.s
